1999-07-09  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/commands.c (view_toggle_rulers_cmd_callback): set the
	"visible" flags before mapping the widgets.

1999-07-08  Raja R Harinath  <harinath@cs.umn.edu>

	* tools/pdbgen/app.pl (generate): Fix typo.
	* tools/pdbgen/Makefile.am: Clean up srcdir != builddir.

Thu Jul  8 00:08:50 EDT 1999  Adrian Likins <alikins@redhat.com>

	*app/interface.c: added type for _NETSCAPE_URL to the DnD stuff
	so you can now drag image urls from netscape

Wed Jul  7 20:33:24 MEST 1999  Sven Neumann <sven@gimp.org>

	* Makefile.am
	* pixmaps/locked.xpm: removed
	* pixmaps/locked.xbm: new file
	* app/paths_dialog.c: Use a bitmap in the style of the eye instead of
	the lock pixmap. This could be done more elegantly, but the 
	paths_dialog is a mess, sorry.

1999-07-07  Michael Natterer  <mitschel@cs.tu-berlin.de>

        * app/gdisplay.c (gdisplay_set_menu_sensitivity): don't make menus
        unreachable by forgetting to set them sensitive again.

Wed Jul  7 12:53:54 MEST 1999 Sven Neumann <sven@gimp.org>

	* app/global_edit.c: cosmetic changes

Tue Jul  6 22:05 CST 1999 Seth Burgess <sjburges@gimp.org>

	* app/qmask.h : took out a relic pixmaps.h that broke compilation (oops)

Tue Jul	 6 20:55 CST 1999 Seth Burgess <sjburges@gimp.org>

	* pixmaps/qmasknosel.xpm 
	* pixmaps/qmasksel.xpm: Ugly pixmaps that tigert promised to replace
	
 	* app/channel.[ch]
	* app/channel_cmds.c : made some of the private structures accessible
	  through exported functions to keep things a bit clean
	
	* app/interface.c
	* app/gdisplay.[ch]
	* app/gimpimageP.h
	* app/gimpimage.[ch]
	* app/undo.[ch]: added qmasks
	
	* app/Makefile.am
	* app/qmask.[ch]: added new files for qmask support

	* tools/pdbgen/pdb: changed some channel stuff to keep things a bit
          more private

Wed Jul  7 03:54:54 MEST 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c: Fixed typo. 
	We definitely need a pdbgen tool to generate the 